src/objects/tdc_tsw__Survey_Answers__c.object
<CustomObject>
    <fields>
        <fullName>tdc_tsw__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Next_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Question</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>tdc_tsw__Message_Template__c.tdc_tsw__SMS_Survey__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tdc_tsw__Message_Template__c</referenceTo>
        <relationshipLabel>Survey Answers</relationshipLabel>
        <relationshipName>Survey_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Possible_Answers__c</fullName>
        <label>Possible Answers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__SMS_Template__c</fullName>
        <label>SMS Template</label>
        <referenceTo>tdc_tsw__Message_Template__c</referenceTo>
        <relationshipLabel>Survey Answers (SMS Template)</relationshipLabel>
        <relationshipName>Survey_Answers1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Survey Answer</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Survey Answers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>